--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'QL'
 - !lcsh 'Owls'
+- GITenberg
 title: The Postnatal Development of Two Broods of Great Horned Owls (Bubo virginianus)
 url: http://www.gutenberg.org/ebooks/35118
